Left filter regression and PTS Packaging ID story